Sửa n+1 product, hiển thị lấy 1 product theo id, name